--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                   <a class="nav-link" href="about.html"> Tentang Kami</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="chocolate.html">Sayuran</a>
+                  <a class="nav-link" href="chocolate.html">Produk</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="testimonial.html">Testimoni</a>
