--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   <a class="nav-link" href="about.html"> Tentang Kami</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="chocolate.html">Sayuran</a>
+                  <a class="nav-link" href="chocolate.html">Produk</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="testimonial.html">Testimoni</a>
@@ -404,7 +404,7 @@
                 <a class="nav-link" href="index.html">Beranda <span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="about.html"> Tentang Kami</a>
                 </a>
-                <a class="nav-link" href="chocolate.html">Sayuran</a>
+                <a class="nav-link" href="chocolate.html">Produk</a>
                 <a class="nav-link" href="testimonial.html">Testimoni</a>
                 <a class="nav-link" href="contact.html">Hubungi Kami</a>
               </div>
